@@ -1,22 +1,21 @@
 package com.example.semestreservice.service;
 
-import com.example.semestreservice.service.IProgramaClient;
 import com.example.semestreservice.dto.SemestreRequest;
 import com.example.semestreservice.dto.SemestreResponse;
 import com.example.semestreservice.exception.ResourceNotFoundException;
-import com.example.semestreservice.model.ProgramaDTO;
 import com.example.semestreservice.model.Semestre;
 import com.example.semestreservice.repository.SemestreRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashMap;
 import java.util.List;
+import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,13 +27,14 @@ public class SemestreService {
     @Transactional
     public SemestreResponse crearSemestre(SemestreRequest request) {
         validarFechas(request);
-        validarPrograma(request.idPrograma()); // valida existencia del programa
+        validarPrograma(request.idPrograma());
 
         Semestre semestre = new Semestre();
         semestre.setNombre(request.nombre());
         semestre.setFechaInicio(request.fechaInicio());
         semestre.setFechaFin(request.fechaFin());
         semestre.setActivo(request.activo());
+        semestre.setIdPrograma(request.idPrograma());
 
         semestre = semestreRepository.save(semestre);
         return mapToResponse(semestre);
@@ -44,7 +44,27 @@ public class SemestreService {
     public List<SemestreResponse> listarSemestres() {
         return semestreRepository.findAll().stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public Map<String, Object> listarSemestresPaginados(int page) {
+        int pageSize = 10;
+        PageRequest pageable = PageRequest.of(page, pageSize);
+        Page<Semestre> pageResult = semestreRepository.findAll(pageable);
+
+        List<SemestreResponse> content = pageResult.getContent()
+                .stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("semestres", content);
+        response.put("currentPage", pageResult.getNumber());
+        response.put("totalItems", pageResult.getTotalElements());
+        response.put("totalPages", pageResult.getTotalPages());
+
+        return response;
     }
 
     @Transactional(readOnly = true)
@@ -57,7 +77,7 @@ public class SemestreService {
     @Transactional
     public SemestreResponse actualizarSemestre(Long id, SemestreRequest request) {
         validarFechas(request);
-        validarPrograma(request.idPrograma()); // valida existencia del programa
+        validarPrograma(request.idPrograma());
 
         Semestre semestre = semestreRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Semestre", "id", id));
@@ -66,6 +86,7 @@ public class SemestreService {
         semestre.setFechaInicio(request.fechaInicio());
         semestre.setFechaFin(request.fechaFin());
         semestre.setActivo(request.activo());
+        semestre.setIdPrograma(request.idPrograma());
 
         semestre = semestreRepository.save(semestre);
         return mapToResponse(semestre);
@@ -80,18 +101,8 @@ public class SemestreService {
     }
 
     @Transactional(readOnly = true)
-    public Map<String, Object> listarSemestresPaginados(int page) {
-        int pageSize = 10;
-        Pageable pageable = PageRequest.of(page, pageSize);
-        Page<Semestre> pageResult = semestreRepository.findAll(pageable);
-
-        Map<String, Object> response = new HashMap<>();
-        response.put("semestres", pageResult.getContent());
-        response.put("currentPage", pageResult.getNumber());
-        response.put("totalItems", pageResult.getTotalElements());
-        response.put("totalPages", pageResult.getTotalPages());
-
-        return response;
+    public boolean existeSemestre(Long id) {
+        return semestreRepository.existsById(id);
     }
 
     private SemestreResponse mapToResponse(Semestre semestre) {
@@ -100,7 +111,8 @@ public class SemestreService {
                 semestre.getNombre(),
                 semestre.getFechaInicio(),
                 semestre.getFechaFin(),
-                semestre.getActivo()
+                semestre.getActivo(),
+                semestre.getIdPrograma()
         );
     }
 
@@ -111,13 +123,9 @@ public class SemestreService {
     }
 
     private void validarPrograma(Long idPrograma) {
-        Map<String, List<ProgramaDTO>> response = programaClient.obtenerProgramas();
-        List<ProgramaDTO> programas = response.get("programas"); // asegúrate que la clave coincida con tu JSON
-
-        boolean existe = programas.stream()
-                .anyMatch(p -> p.getId().equals(idPrograma));
-
-        if (!existe) {
+        try {
+            programaClient.obtenerProgramaPorId(idPrograma);
+        } catch (Exception e) {
             throw new ResourceNotFoundException("Programa", "id", idPrograma);
         }
     }
